[package]
name = "example-sei-token-translator"
version = "0.1.0"
authors = ["Wormhole Project Contributors"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
sei-cosmwasm = { version = "0.4.10" }
cosmwasm-std = "1.0.0"
cw-storage-plus = "0.13.2"
cw20 = "0.13.2"
cosmwasm-schema = "1"
anyhow = "1"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
serde_json = "1"
thiserror = "1.0.31"

cw20-wrapped-2 = { version = "0.1.0", features = ["library"] }
wormhole-bridge-terra-2 = { version = "0.1.0", features = ["library"] }
token-bridge-terra-2 = { version = "0.1.0", features = ["library"] }

[patch.crates-io]
cw20-wrapped-2 = { git = "https://github.com/wormhole-foundation/wormhole" }
token-bridge-terra-2 = { git = "https://github.com/wormhole-foundation/wormhole" }
wormhole-bridge-terra-2 = { git = "https://github.com/wormhole-foundation/wormhole" }